# Campus_Analyzer

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
apps/: Dashboard.py  utils.py
apps/pages/: 0_Overall_Summary.py  1_Electricity.py  2_WiFi.py  3_Mess.py  4_Library.py  5_Transport.py
data/processed/: anomalies.csv  buildings.csv  buses.csv  data_dictionary.csv  electricity_usage.csv  forecast_electricity_daily.csv  library_occupancy.csv  mess_footfall.csv  messes.csv  model_metrics.json  peak_mess_hours_forecast.csv  quality_report.json  recommendations.csv  shuttle_transport.csv  wifi_aps.csv  wifi_usage.csv
data/raw/: attendance_logs_raw.csv  electricity_usage_raw.csv  library_occupancy_raw.csv  mess_footfall_raw.csv  shuttle_transport_raw.csv  wifi_usage_raw.csv
reports/: DEMO_SCRIPT.md  INSIGHT_REPORT.md
scripts/: run_pipeline.py
src/campus_intel/: config.py  db.py  etl.py  pipeline.py  recommend.py  simulate.py  utils.py
src/campus_intel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/campus_intel/models/: anomaly.py  forecast.py  mess_peak.py
src/campus_intel/sql/: schema.sql  views.sql
